# linea-sgx-prover

./: .gitignore  .gitmodules  Cargo.toml  README.md
config/: prover-localhost.json
scripts/: deploy_dcap_attestation.sh  prover.sh
src/apps/prover/: Cargo.toml
src/apps/prover/src/: apps.rs  lib.rs  types.rs
src/common/eth_tools/: Cargo.toml
src/common/eth_tools/src/: execution_client.rs  lib.rs  pob.rs
src/common/executor/: Cargo.toml
src/common/executor/src/: lib.rs  state_proxy.rs  tx_executor.rs  types.rs
src/common/linea/: Cargo.toml
src/common/linea/src/: batch_task.rs  block_executor.rs  cache.rs  database.rs  engine.rs  lib.rs  trie.rs  zktrie_state.rs
src/common/mimc/: Cargo.toml
src/common/mimc/src/: constants.rs  fr.rs  hash.rs
src/common/mpt/: Cargo.toml
src/common/mpt/src/: lib.rs  trie.rs  trie_state.rs
src/common/shomei/src/: client.rs
src/common/statedb/: Cargo.toml
src/common/statedb/src/: cache.rs  trie_state.rs  types.rs
src/common/zktrie/: Cargo.toml
src/common/zktrie/src/: hash.rs  lib.rs  node.rs  sparse_merkle_trie.rs  storage.rs  trace.rs  trie.rs  utils.rs
verifier/: hardhat.config.ts
verifier/contracts/: AutomataDcapV3Attestation.sol  SGXVerifier.sol
verifier/scripts/: deploy.ts
