[workspace]
members = [
    "bin/std/prover",

    "src/apps/prover",
    "src/common/eth_tools",
    "src/common/statedb",
    "src/common/mpt",
    "src/common/executor",
    "src/common/linea",
]

# [patch.'https://github.com/automata-network/evm-rs']
# evm = { path = "/Users/liaoyi/work/projects/evm-rs" }