[package]
name = "app-prover"
version = "0.1.0"
authors = [ "Automata Authors" ]
edition = "2021"

[features]
default = ["std"]

std = ["glog/std", "app/std", "base/std", "jsonrpc/std", "serde/std", "serde_json/std", "eth-tools/std", "statedb/std", "mpt/std", "evm-executor/std",  "eth_types/std",  "crypto/std", "linea/std", "solidity/std", "shomei/std", "zktrie/std"]
tstd = ["sgxlib/tstd", "glog/tstd", "app/tstd", "base/tstd", "jsonrpc/tstd", "serde/tstd", "serde_json/tstd", "eth-tools/tstd", "statedb/tstd", "mpt/tstd", "evm-executor/tstd", "eth_types/tstd", "crypto/tstd", "linea/tstd", "solidity/tstd", "shomei/tstd", "zktrie/tstd"]
sgx = ["linea/sgx", "crypto/sgx"]

[dependencies]
app = { git = "https://github.com/automata-network/app-rs", default-features = false }
shomei = { path = "../../common/shomei", default-features = false }
zktrie = { path = "../../common/zktrie", default-features = false }
sgxlib = { git = "https://github.com/automata-network/sgxlib", default-features = false }
glog = { git = "https://github.com/automata-network/glog-rs", default-features = false }
base = { git = "https://github.com/automata-network/base-rs", default-features = false }
jsonrpc = { git = "https://github.com/automata-network/jsonrpc-rs", default-features = false }
eth_types = { git = "https://github.com/automata-network/eth-types-rs", default-features = false }
eth-tools = { git = "https://github.com/automata-network/eth-tools-rs", default-features = false }
statedb = { git = "https://github.com/automata-network/statedb-rs", default-features = false, branch = "v2" }
mpt = { git = "https://github.com/automata-network/mpt-rs", default-features = false }
evm-executor = { git = "https://github.com/automata-network/evm-executor-rs", default-features = false }
linea = { path = "../../common/linea", default-features = false }
solidity = { git = "https://github.com/automata-network/solidity-rs", default-features = false }
crypto = { git = "https://github.com/automata-network/crypto-rs", default-features = false }

serde = { git = "https://github.com/automata-network/sgxlib-thirdparty", default-features = false }
serde_json = { git = "https://github.com/automata-network/sgxlib-thirdparty", default-features = false }
