[package]
name = "linea"
version = "0.1.0"
authors = ["Automata Team"]
edition = "2021"
license = "Apache-2.0"

[features]
default = ["std"]

std = ["base/std", "eth_types/std", "glog/std", "eth_tools/std", "crypto/std", "statedb/std", "mpt/std", "executor/std"]
tstd = ["base/tstd", "eth_types/tstd", "glog/tstd", "eth_tools/tstd", "crypto/tstd", "statedb/tstd", "mpt/tstd", "executor/tstd"]

[dependencies]
sgxlib = { git = "https://github.com/automata-network/sgxlib", default-features = false }
eth_tools = { path = "../eth_tools", default-features = false }
base = { git = "https://github.com/automata-network/base-rs", default-features = false }
eth_types = { git = "https://github.com/automata-network/eth-types-rs", default-features = false }
glog = { git = "https://github.com/automata-network/glog-rs", default-features = false }
crypto = { git = "https://github.com/automata-network/crypto-rs", default-features = false }
statedb = { path = "../statedb", default-features = false }
mpt = { path = "../mpt", default-features = false }
executor = { path = "../executor", default-features = false }

lazy_static = { version = "1.4.0", default-features = false, features = ["spin_no_std"] }
rlp = { version = "0.5", default-features = false }
rlp-derive = { version = "0.1" }